tests/analyzer/errors/array.rv
fn main() {
    var arr = [1, true]
    var arr: [][]int = [1, 2,]
    var arr: []int = [true, false]

    var foo = "not an array"
    foo[0]

    var array = [1.5, 6.8]
    array[true]
    array[1.0]
}
